--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,23 @@
   <div id="root"></div>
 
 </body>
+<script>
+  const navSlide =() =>{
+    const burger = document.querySelector('.burger');
+    const nav = document.querySelector('.nav-menu');
+    const navLinks = document.querySelectorAll('.nav-menu a');
+    
+    burger.addEventListener('click',() => {
+      nav.classList.toggle('nav-active');
+    });
 
+    navLinks.forEach((link, index) =>{
+      link.style.animation = `navLinkFade 0.5s ease forwards ${index / 7 + 0.3}s`
+    });
+  }
+
+  navSlide();
+</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
